--- a/angular-tour-of-heroes/src/styles.css
+++ b/angular-tour-of-heroes/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
 h1 {
-    color: #369;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
   }
@@ -11,6 +11,7 @@ h1 {
     font-weight: lighter;
   }
   body {
+    background-color: #228B22	;
     margin: 2em;
   }
   body, input[type="text"], button {
